user-specific recommendations backend (#543)
