# backend/tournesol/views/polls.py
@@ -22,6 +22,24 @@ from tournesol.serializers.poll import (
 
 logger = logging.getLogger(__name__)
 
+WEIGHTS_PARAMETER = OpenApiParameter(
+    "weights",
+    OpenApiTypes.OBJECT,
+    style="deepObject",
+    description="Weights for criteria in this poll."
+                " The default weight is 10 for each criteria.",
+    examples=[
+        OpenApiExample(
+            name="weights example",
+            value={
+                "reliability": 10,
+                "importance": 10,
+                "ignored_criteria": 0,
+            },
+        )
+    ],
+)
+
 
 class PollsView(RetrieveAPIView):
     """
@@ -39,39 +57,21 @@ class PollsView(RetrieveAPIView):
         description="Retrieve a list of recommended videos, sorted by decreasing total score.",
         parameters=[
             RecommendationsFilterSerializer,
-            OpenApiParameter(
-                "weights",
-                OpenApiTypes.OBJECT,
-                style="deepObject",
-                description="Weights for criterias in this poll."
-                " The default weight is 10 for each criteria.",
-                examples=[
-                    OpenApiExample(
-                        name="weights example",
-                        value={
-                            "reliability": 10,
-                            "importance": 10,
-                            "ignored_criteria": 0,
-                        },
-                    )
-                ],
-            ),
+            WEIGHTS_PARAMETER,
         ],
     )
 )
 class PollsRecommendationsView(ListAPIView):
     permission_classes = []
     serializer_class = RecommendationSerializer
-    queryset = Entity.objects.none()
+
+    queryset = Entity.objects.all()
 
     def get_queryset(self):
-        request = self.request
+        queryset = self.queryset
+
         poll = get_object_or_404(Poll, name=self.kwargs["name"])
-        criterias = poll.criterias_list
-
-        queryset = Entity.objects.all()
-
-        filter_serializer = RecommendationsFilterSerializer(data=request.query_params)
+        filter_serializer = RecommendationsFilterSerializer(data=self.request.query_params)
         filter_serializer.is_valid(raise_exception=True)
         recommendations_filter = filter_serializer.validated_data
 
@@ -87,16 +87,35 @@ class PollsRecommendationsView(ListAPIView):
         if date_gte:
             queryset = poll.entity_cls.filter_date_gte(queryset, date_gte)
 
+        queryset = self.get_scores(queryset, self.request, poll)
+
+        queryset = self.filter_unsafe(queryset, recommendations_filter)
+
+        return queryset.order_by("-total_score", "-pk")
+
+    def filter_unsafe(self, queryset, recommendations_filter):
+        show_unsafe = recommendations_filter["unsafe"]
+        if show_unsafe:
+            queryset = queryset.filter(total_score__isnull=False)
+        else:
+            queryset = queryset.filter(
+                rating_n_contributors__gte=settings.RECOMMENDATIONS_MIN_CONTRIBUTORS
+            ).filter(total_score__gt=0)
+
+        return queryset
+
+    def get_scores(self, queryset, request, poll):
+
         criteria_cases = []
-        for crit in criterias:
+        for crit in poll.criterias_list:
             raw_weight = request.query_params.get(f"weights[{crit}]")
             if raw_weight is not None:
                 try:
                     weight = int(raw_weight)
-                except ValueError:
+                except ValueError as value_error:
                     raise serializers.ValidationError(
                         f"Invalid weight value for criteria '{crit}'"
-                    )
+                    ) from value_error
             else:
                 weight = 10
             criteria_cases.append(When(criteria_scores__criteria=crit, then=weight))
@@ -109,17 +128,9 @@ class PollsRecommendationsView(ListAPIView):
             )
         )
 
-        show_unsafe = recommendations_filter["unsafe"]
-        if show_unsafe:
-            queryset = queryset.filter(total_score__isnull=False)
-        else:
-            queryset = queryset.filter(
-                rating_n_contributors__gte=settings.RECOMMENDATIONS_MIN_CONTRIBUTORS
-            ).filter(total_score__gt=0)
-
         return queryset.prefetch_related(
             Prefetch(
                 "criteria_scores",
                 queryset=EntityCriteriaScore.objects.filter(poll=poll),
             )
-        ).order_by("-total_score", "-pk")
+        )
